corrected empty href and addjusted spacing for buttons on mobile

--- a/css/root.less
+++ b/css/root.less
@@ -130,7 +130,7 @@ p {
 }
 
 .circle {
-	margin-top: 0.5em;
+	margin: 0.25em;
 	padding-top: 0.3em;
 	display: inline-block;
 	background-color: rgba(102, 106, 115, 0.7);
